# fastapi-template

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  cli.py  pyproject.toml
app/: main.py
app/application/use_cases/: __init__.py  base.py
app/application/use_cases/auth/: __init__.py  login.py  logout.py  refresh.py
app/application/use_cases/users/: __init__.py  get_current_user.py  register.py
app/domain/: exceptions.py
app/domain/dto/: __init__.py  auth.py  user.py
app/domain/entities/: auth.py  user.py
app/domain/interfaces/: __init__.py  auth_session_repo.py  token_service.py  uow.py  user_repo.py
app/infrastructure/: consts.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: session.py  uow.py
app/infrastructure/database/models/: __init__.py  auth.py  base.py  user.py
app/infrastructure/database/repositories/: __init__.py  auth_session_repo.py  user_repo.py
app/infrastructure/di/: __init__.py  app_provider.py  container.py  http_provider.py  use_case_provider.py
app/infrastructure/logging/: logger.py
app/infrastructure/services/: token_service.py
app/presentation/: exception_handlers.py
app/presentation/api/: dependencies.py  router.py
app/presentation/api/private/: auth.py  users.py
app/presentation/api/public/: auth.py  users.py
app/presentation/schemas/: auth.py  user.py
app/presentation/static/css/: style.css
app/presentation/static/js/: auth.js  main.js
app/presentation/templates/: base.html  index.html
app/presentation/templates/auth/: login.html  register.html
app/presentation/templates/users/: profile.html
app/presentation/web/: __init__.py  router.py
migrations/: env.py
migrations/versions/: d6bc8fec8cb8_init.py
tests/: conftest.py
tests/unit/application/use_cases/: test_login.py  test_logout.py  test_refresh_token.py  test_register.py
